<resources>
    <string name="app_name">Cita App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>
    <string name="action_logout">Keluar</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_child">Data Anak</string>
    <string name="menu_show_child">Detail Data Anak</string>
    <string name="menu_create_child">Tambah Data Anak</string>
    <string name="menu_nutrient">Data Kandungan Gizi</string>
    <string name="menu_create_nutrient">Tambah Data Kandungan Gizi</string>
    <string name="menu_diagnoses">Data Diagnosa Anak</string>
    <string name="menu_create_diagnoses">Tambah Data Diagnosa Anak</string>
    <string name="menu_result_diagnoses">Hasil Data Diagnosa Anak</string>
    <string name="menu_show_diagnoses">Detail Data Diagnosa Anak</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_email_address_with_asterisk">Alamat Email*</string>
    <string name="txt_password_with_asterisk">Kata Sandi*</string>
    <string name="txt_confirm_password_with_asterisk">Ulangi Kata Sandi*</string>
    <string name="txt_full_name_with_asteriks">Nama Lengkap*</string>
    <string name="txt_next">lanjut</string>
    <string name="txt_cancel">batal</string>
    <string name="txt_delete">hapus</string>
    <string name="txt_back">kembali</string>
    <string name="txt_dont_have_account_with_question_mark">Belum punya akun?&#160;</string>
    <string name="txt_have_account_with_question_mark">Sudah punya akun?&#160;</string>
    <string name="txt_register_now">Daftar Sekarang!</string>
    <string name="txt_login_now">Masuk Sekarang!</string>
    <string name="txt_forgot_password_with_question_mark">Lupa kata sandi?&#160;</string>
    <string name="txt_reset_password">Atur Ulang Kata Sandi</string>
    <string name="txt_remember_me">Ingat saya</string>
    <string name="txt_child_name_with_asterisk">Nama Anak*</string>
    <string name="txt_date_of_birth_with_asterisk">Tanggal Lahir*</string>
    <string name="txt_child_gender_with_asterisk">Jenis Kelamin*</string>
    <string name="txt_full_name">Nama Lengkap</string>
    <string name="txt_email_address">Alamat Email</string>
    <string name="txt_full_name_with_colon">Nama Lengkap:&#160;</string>
    <string name="txt_child_name_with_colon">Nama Anak:&#160;</string>
    <string name="txt_child_name">Nama Anak</string>
    <string name="txt_gender_with_colon">Jenis Kelamin:&#160;</string>
    <string name="txt_gender">Jenis Kelamin</string>
    <string name="txt_date_of_birth_with_colon">Tanggal Lahir:&#160;</string>
    <string name="txt_date_of_birth">Tanggal Lahir</string>
    <string name="txt_nutrient_name_with_colon">Nama Kandungan Gizi:&#160;</string>
    <string name="txt_calories_with_colon">Kalori:&#160;</string>
    <string name="txt_fat_with_colon">Lemak:&#160;</string>
    <string name="txt_protein_with_colon">Protein:&#160;</string>
    <string name="txt_carbohydrate_with_colon">Karbohidrat:&#160;</string>
    <string name="txt_age_with_colon">Usia:&#160;</string>
    <string name="txt_age">Usia</string>
    <string name="txt_weight_with_colon">Berat Badan (Kg):&#160;</string>
    <string name="txt_weight">Berat Badan (Kg)</string>
    <string name="txt_height_with_colon">Tinggi Badan (cm):&#160;</string>
    <string name="txt_height">Tinggi Badan (cm)</string>
    <string name="txt_diagnoses_result_with_colon">Hasil Diagnosa:&#160;</string>
    <string name="txt_diagnoses_result">Hasil Diagnosa</string>
    <string name="txt_description_with_colon">Deskripsi:&#160;</string>
    <string name="txt_description">Deskripsi</string>
    <string name="txt_diagnoses_date_with_colon">Tanggal Diagnosa:&#160;</string>
    <string name="txt_diagnoses_date">Tanggal Diagnosa</string>
    <string name="txt_weight_child_with_asterisk">Berat Badan (Kg)*</string>
    <string name="txt_height_child_with_asterisk">Tinggi Badan (cm)*</string>

</resources>
