<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cita.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.cita.myapplication.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_nutrient"
        android:name="com.cita.myapplication.ui.nutrient.NutrientFragment"
        android:label="@string/menu_nutrient"
        tools:layout="@layout/fragment_nutrient" />

    <fragment
        android:id="@+id/nav_child"
        android:name="com.cita.myapplication.ui.child.ChildFragment"
        android:label="@string/menu_child"
        tools:layout="@layout/fragment_child">
        <action
            android:id="@+id/action_nav_child_to_nav_create_child"
            app:destination="@id/nav_create_child" />
        <action
            android:id="@+id/action_nav_child_to_nav_show_child"
            app:destination="@id/nav_show_child" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_child"
        android:name="com.cita.myapplication.ui.child.CreateChildFragment"
        android:label="@string/menu_create_child"
        tools:layout="@layout/fragment_create_child">
        <argument
            android:name="userId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_show_child"
        android:name="com.cita.myapplication.ui.child.ShowChildFragment"
        android:label="@string/menu_show_child"
        tools:layout="@layout/fragment_show_child">
        <argument
            android:name="childId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_diagnoses"
        android:name="com.cita.myapplication.ui.diagnoses.DiagnosesFragment"
        android:label="@string/menu_diagnoses"
        tools:layout="@layout/fragment_diagnoses">

        <action
            android:id="@+id/action_nav_diagnoses_to_nav_create_diagnoses"
            app:destination="@id/nav_create_diagnoses" />
        <action
            android:id="@+id/action_nav_diagnoses_to_nav_show_diagnoses"
            app:destination="@id/nav_show_diagnoses" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_diagnoses"
        android:name="com.cita.myapplication.ui.diagnoses.CreateDiagnosesFragment"
        android:label="@string/menu_create_diagnoses"
        tools:layout="@layout/fragment_create_diagnoses">
        <argument
            android:name="userId"
            android:defaultValue="0"
            app:argType="integer" />
        <action
            android:id="@+id/action_nav_create_diagnoses_to_nav_result_diagnoses"
            app:destination="@id/nav_result_diagnoses" />
    </fragment>

    <fragment
        android:id="@+id/nav_result_diagnoses"
        android:name="com.cita.myapplication.ui.diagnoses.ResultDiagnosesFragment"
        android:label="@string/menu_result_diagnoses"
        tools:layout="@layout/fragment_result_diagnoses">
        <argument
            android:name="diagnosesId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_show_diagnoses"
        android:name="com.cita.myapplication.ui.diagnoses.ShowDiagnosesFragment"
        android:label="@string/menu_show_diagnoses"
        tools:layout="@layout/fragment_show_diagnoses">
        <argument
            android:name="diagnosesId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>


</navigation>