<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tool:context=".ui.child.CreateChildFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_child_name_with_asterisk"
            app:errorEnabled="true"
            app:helperText="*Wajib"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_menu_child"
                android:drawablePadding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date_of_birth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_date_of_birth_with_asterisk"
            app:errorEnabled="true"
            app:helperText="*Wajib"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="10dp"
                android:editable="false"
                android:focusable="false"
                android:inputType="datetime" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_child_gender_with_asterisk"
            app:errorEnabled="true"
            app:helperText="*Wajib"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_date_of_birth">

            <AutoCompleteTextView
                android:id="@+id/dropdown_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gender_24dp"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:editable="false" />

            <!--            <com.google.android.material.textfield.TextInputEditText-->
            <!--                android:id="@+id/tiet_gender"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:drawableStart="@drawable/ic_gender_24dp"-->
            <!--                android:drawablePadding="10dp"-->
            <!--                android:inputType="text" />-->

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/rl_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_gender">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/txt_next" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@id/btn_next"
                android:text="@string/txt_cancel" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
